--- a/sys/css/style.css
+++ b/sys/css/style.css
@@ -17,6 +17,12 @@
 #test {
 	background-color: lightgray;
 }
+.semiTarget {
+	margin: -0.75px;
+	border:solid;
+	border-color: black;
+	border-width: 0.75px;
+}
 .mainTarget {
 	margin: -1.5px;
 	border:solid;
